--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,5 +3,11 @@
 
 @theme {
   --color-Qmain:#1D252D;
+  --color-Qdark:#0F1317;
+  --color-Qlight:#2B353E;
   --color-Qaccent:#CC0700;
+  --color-Qaccentdark:#AC0802;
+}
+button{
+  cursor: pointer;
 }
