feat: add user creation functionality and dashboard enhancements
- Added new dependencies for ng-icons.
- Introduced CreateUser component for user creation with form validation.
- Updated routing to include CreateUser page.
- Enhanced Dashboard layout with a new Header component.
- Refactored Sidebar to dynamically render links based on user roles.
- Implemented SharedFunctions service for user session management.
- Created Supabase Edge Function for user creation with avatar upload support.
- Added tests for SharedFunctions and CreateUser components.

--- a/src/app/components/organisms/layout/auth/auth.html
+++ b/src/app/components/organisms/layout/auth/auth.html
@@ -2,7 +2,7 @@
   <div class="w-full max-w-7xl bg-Qlight rounded-2xl shadow-lg overflow-hidden grid grid-cols-1 md:grid-cols-2">
 
 
-    <!-- LEFT: Form panel -->
+    <!-- LEFT Form panel -->
     <div class="p-4 md:p-12 md:p-16 flex flex-col justify-center">
       <div class="flex items-center gap-3 mb-6">
         <div class="w-10 h-10 rounded-full bg-Qaccent flex items-center justify-center">
@@ -26,6 +26,8 @@
       <router-outlet></router-outlet>
     </div>
 
+
+    <!-- RIght Form p -->
     <div
       class="hidden md:flex flex-col gap-2 justify-center bg-gradient-to-l from-Qaccent to-Qaccentmain text-white w-full rounded-l-xl p-10 ">
       <h2 class="text-3xl font-bold mb-2">Welcome to QuickBallot</h2>
