--- a/src/app/components/organisms/layout/dashboard/dashboard.html
+++ b/src/app/components/organisms/layout/dashboard/dashboard.html
@@ -1,13 +1,13 @@
-<section class="grid h-screen grid-rows-11">
+<section class="grid h-screen grid-rows-10">
 
    <!-- header -->
-  <div class="row-span-1 h-[100%] sticky top-0 z-10">
+  <div class="bg-Qmain row-span-1 sticky top-0 z-10">
 
     <app-header></app-header>
   </div>
 
 <!-- body -->
-  <div class="row-span-10 w-full grid grid-cols-6 grid-row-1 ">
+  <div class="row-span-9 w-full grid grid-cols-6 grid-row-1 ">
     <!-- sidebar -->
     <div class="bg-Qmain col-span-1 lg:col-span-1 hidden lg:block h-full overflow-hidden">
     <app-sidebar></app-sidebar>
