--- a/src/app/components/organisms/layout/dashboard/header/header.html
+++ b/src/app/components/organisms/layout/dashboard/header/header.html
@@ -1,4 +1,4 @@
-<header *ngIf="!header" class="w-full bg-Qmain text-white shadow-sm px-4 py-3 flex items-center justify-between">
+<header *ngIf="!header" class="w-full bg-Qmain text-white  px-4 py-3 flex items-center justify-between">
   <!-- Left: Title or Logo -->
   <div *ngIf="!header" class="flex gap-2 items-center">
     <button (click)="toggleSidebar()"
